<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/crime_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/crime_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/crime_photo"
        app:layout_constraintStart_toStartOf="@+id/crime_photo"
        app:layout_constraintTop_toBottomOf="@+id/crime_photo"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/crime_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/crime_title_label"
        app:layout_constraintStart_toEndOf="@+id/crime_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/crime_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/crime_title_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/crime_photo"
        app:layout_constraintTop_toBottomOf="@+id/crime_view" />

    <Button
        android:id="@+id/crime_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/crime_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/crime_camera"
        app:layout_constraintTop_toBottomOf="@+id/crime_title"
        tools:text="date" />

    <Button
        android:id="@+id/crime_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/crime_camera"
        app:layout_constraintTop_toBottomOf="@+id/crime_date" />

    <TextView
        android:id="@+id/listSepView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/crime_details_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crime_time" />

    <CheckBox
        android:id="@+id/police_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/required_police"
        app:layout_constraintEnd_toStartOf="@+id/crimeSolved"
        app:layout_constraintTop_toBottomOf="@+id/listSepView" />

    <CheckBox
        android:id="@+id/crimeSolved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="20dp"
        android:text="@string/crime_solved_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listSepView" />

    <Button
        android:id="@+id/crime_suspect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/crime_suspect_text"
        app:layout_constraintEnd_toStartOf="@+id/call_suspect_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/police_required" />

    <Button
        android:id="@+id/call_suspect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/call_suspect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/crime_suspect"
        app:layout_constraintTop_toBottomOf="@+id/police_required" />

    <Button
        android:id="@+id/crime_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/crime_report_text"
        app:layout_constraintTop_toBottomOf="@+id/crime_suspect"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>